fix: correct alignment issue in Square component

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@
   font-family: sans-serif;
   text-align: center;
 }
+.square {
+  height: 25px;
+  width: 30px;
+  outline: none;
+  vertical-align: top;
+}
